RESOLVED FIXED59986
[GTK] Compiler warning in Tools/MiniBrowser/main.c
https://bugs.webkit.org/show_bug.cgi?id=59986
Summary [GTK] Compiler warning in Tools/MiniBrowser/main.c
Martin Robinson
Reported 2011-05-02 17:12:06 PDT
/bin/mkdir -p ./.deps/DerivedSources CC Tools/MiniBrowser/gtk/Programs_MiniBrowser-main.o ../../Tools/MiniBrowser/gtk/main.c:58:5: warning: missing initializer ../../Tools/MiniBrowser/gtk/main.c:58:5: warning: (near initialization for ‘commandLineOptions[1].short_name’) CCLD Programs/MiniBrowser
Attachments
Patch (1.32 KB, patch)
2011-05-02 17:13 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-05-02 17:13:39 PDT
Xan Lopez
Comment 2 2011-05-02 18:53:39 PDT
Comment on attachment 92012 [details] Patch OK.
WebKit Commit Bot
Comment 3 2011-05-02 19:34:21 PDT
Comment on attachment 92012 [details] Patch Rejecting attachment 92012 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-..." exit_code: 1 Last 500 characters of output: autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output: http://queues.webkit.org/results/8534239
WebKit Commit Bot
Comment 4 2011-05-02 21:46:09 PDT
Comment on attachment 92012 [details] Patch Clearing flags on attachment: 92012 Committed r85583: <http://trac.webkit.org/changeset/85583>
WebKit Commit Bot
Comment 5 2011-05-02 21:46:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.