2011-05-02  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Compiler warning in Tools/MiniBrowser/main.c
        https://bugs.webkit.org/show_bug.cgi?id=59986

        Remove a compiler warning.

        * MiniBrowser/gtk/main.c: Use full array initializers to prevent some compilers
        from complaining.

git-svn-id: svn://svn.chromium.org/blink/trunk@85583 bbb929c8-8fbe-4397-9dbb-9b2b20218538